y project is done

--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
     color: #646CFF;
     font-weight: 600;
     background-color: rgb(240, 243, 255);
-    border-left: 2px solid #646CFF;
-    border-right: 2px solid #646CFF;
+    border-left: 2px solid #13b189;
+    border-right: 2px solid #0fda7b;
 }
 
